Fix spacing

--- a/source/stylesheets/components/_blog.scss
+++ b/source/stylesheets/components/_blog.scss
@@ -24,20 +24,11 @@
 
   .blog__hed {
     @extend .extend-heading-gradient;
-  
-    @supports (text-box-edge: cap) and (text-box-trim: trim-both) {
-      @media (min-width: #{$bp-medium}) {
-        margin: 1rem;
-      }
-    }
+    margin: 0;
   
     @supports not ((text-box-edge: cap) or (text-box-trim: trim-both)) {
       margin: 0;
-      padding: 1rem 0;
-  
-      @media (min-width: #{$bp-medium}) {
-        padding-top: 0;
-      }
+      padding: 0;
     }
   }
 }
